--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,11 @@ yarn-error.*
 # typescript
 *.tsbuildinfo
 
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 app-example
