--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^16.4.7",
     "expo": "~52.0.25",
     "expo-av": "~15.0.2",
+    "expo-constants": "^17.0.8",
+    "expo-device": "^7.0.3",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
